--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,12 @@
-body {
+@import url("https://fonts.googleapis.com/css2?family=Encode+Sans+SC:wght@300;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap");
+
+* {
 	margin: 0;
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
-		"Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
-		"Helvetica Neue", sans-serif;
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
+	padding: 0;
 }
 
-code {
-	font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-		monospace;
+body {
+	font-family: "Encode Sans SC", sans-serif;
+	letter-spacing: 1px;
 }
