--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Encode+Sans+SC:wght@300;700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&family=Encode+Sans+SC:wght@300;700&display=swap");
 
 * {
 	margin: 0;
