enable shopping cart buttons

--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -34,7 +34,7 @@
 }
 
 .Remove {
-	padding: 1rem 2rem;
+	padding: 0 1rem;
 	border-radius: 1rem;
 	background-color: transparent;
 	font-weight: bold;
