--- a/src/components/Navigation/Navbar/Navbar.css
+++ b/src/components/Navigation/Navbar/Navbar.css
@@ -36,3 +36,23 @@
 .current {
 	color: rgb(248, 184, 66);
 }
+
+.Navbar button {
+	font-family: "Encode Sans SC", sans-serif;
+	color: #fff;
+	height: 100%;
+	text-decoration: none;
+	padding: 0 1rem;
+	font-size: 1rem;
+	justify-self: center;
+	letter-spacing: 1px;
+	transition: all 0.1s ease-in;
+	border: none;
+	outline: none;
+	background-color: transparent;
+	cursor: pointer;
+}
+
+.Navbar button:hover {
+	color: rgb(248, 184, 66);
+}
