--- a/src/components/Orders/Orders.css
+++ b/src/components/Orders/Orders.css
@@ -2,4 +2,7 @@
 	height: calc(100vh - 4.5rem);
 	width: 100vw;
 	background-color: #eee;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
