--- a/src/components/Orders/OrderItem/OrderItem.css
+++ b/src/components/Orders/OrderItem/OrderItem.css
@@ -9,12 +9,19 @@
 	padding: 1rem;
 	display: flex;
 	justify-content: space-between;
+	cursor: pointer;
 }
 
-.Paid {
+.Order-Paid {
 	background-color: rgb(137, 203, 206);
 }
 
-.Complete {
+.Order-Complete {
 	background-color: rgb(132, 184, 132);
+}
+
+.OrderItem-buttons {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-around;
 }
