--- a/src/components/CartItem/CartItem.css
+++ b/src/components/CartItem/CartItem.css
@@ -9,18 +9,21 @@
 
 .CartItem-image {
 	height: 100%;
-	width: 17rem;
+	width: 20rem;
 	display: flex;
 	align-items: center;
+	margin: 0 1rem;
 }
 
 .CartItem-image img {
 	height: 90%;
-	margin-left: 1rem;
+	width: 100%;
+	object-fit: cover;
 }
 
 .CartItem-content {
 	padding: 1rem;
+	width: 100%;
 	display: flex;
 	justify-content: space-between;
 	flex-direction: column;
@@ -35,7 +38,7 @@
 	flex-direction: column;
 	justify-content: space-between;
 	align-items: flex-end;
-	width: 50%;
+	width: 10%;
 	margin: 1rem;
 }
 
