--- a/src/components/ProductCard/ProductCard.css
+++ b/src/components/ProductCard/ProductCard.css
@@ -1,15 +1,16 @@
 .ProductCard {
-	height: auto;
-	padding: 1rem;
-	width: 30%;
-	margin: 1rem;
+	height: 18rem;
+	padding: 1%;
+	width: 17rem;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 }
 
 .ProductCard img {
-	width: 90%;
+	width: 16rem;
+	height: 16rem;
+	object-fit: cover;
 }
 
 .ProductCard-content {
