--- a/src/containers/Store/Store.css
+++ b/src/containers/Store/Store.css
@@ -15,7 +15,7 @@
 
 .Store-main {
 	width: 100%;
-	min-height: 70vh;
+	height: auto;
 	display: flex;
 	flex-direction: row;
 }
@@ -57,4 +57,5 @@
 .Store-products {
 	display: flex;
 	flex-direction: row;
+	flex-wrap: wrap;
 }
