--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -48,3 +48,21 @@
 	transform: scale(1.1);
 	color: rgb(255, 111, 101);
 }
+
+.Filter {
+	width: 100%;
+	text-align: left;
+	color: #333;
+	background-color: transparent;
+	padding: 0.5rem 1rem;
+	font-size: 1rem;
+	transition: all 0.2s ease-in;
+}
+
+.Filter:hover {
+	color: rgb(233, 151, 0);
+}
+
+.Filter-active {
+	color: rgb(233, 151, 0);
+}
