--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -3,7 +3,7 @@
 	width: 100vw;
 	margin: 0;
 	display: flex;
-	overflow-y: hidden;
+	overflow: hidden;
 }
 
 .About-image {
@@ -58,5 +58,37 @@
 	100% {
 		opacity: 1;
 		transform: translateY(0);
+	}
+}
+
+@media (max-width: 1600px) {
+	.About-content p {
+		width: 70%;
+	}
+}
+
+@media (max-width: 1200px) {
+	.About-content {
+		width: 100%;
+		padding: 0;
+	}
+	.About-image {
+		display: none;
+	}
+	.About-content p {
+		width: 50%;
+	}
+}
+
+@media (max-width: 992px) {
+	.About-content p {
+		width: 70%;
+	}
+}
+
+@media (max-width: 768px) {
+	.About-content p {
+		width: 90%;
+		line-height: 1.5rem;
 	}
 }
