--- a/src/components/Navigation/Navbar/NavbarLinks/NavbarLinks.css
+++ b/src/components/Navigation/Navbar/NavbarLinks/NavbarLinks.css
@@ -34,3 +34,18 @@
 .Navbar button:hover {
 	color: rgb(248, 184, 66);
 }
+
+@media (max-width: 768px) {
+	.Navbar-link,
+	.Navbar button {
+		height: auto;
+		padding: 1rem;
+	}
+	.NavbarLinks {
+		margin: 1rem 0;
+		display: flex;
+		flex-direction: column;
+		justify-content: flex-start;
+		align-items: flex-start;
+	}
+}
