--- a/src/components/Navigation/Navbar/Sidebar/Sidebar.css
+++ b/src/components/Navigation/Navbar/Sidebar/Sidebar.css
@@ -5,16 +5,24 @@
 	top: 0;
 	right: 0;
 	width: 20rem;
-	height: 100vh;
+	height: 100%;
 	z-index: 10;
-	display: none;
-	transform: translateX(100%);
-	transition: all 0.5s ease-in;
+	margin: 0;
+	animation-name: sidebar-open;
+	animation-duration: 0.5s;
 }
 
-.Sidebar-open {
-	transform: translateX(0);
+@keyframes sidebar-open {
+	0% {
+		transform: translateX(100%);
+		opacity: 0;
+	}
+	100% {
+		transform: translateX(0);
+		opacity: 1;
+	}
 }
+
 @media (max-width: 768px) {
 	.Sidebar {
 		display: block;
