--- a/src/components/UI/Modal/Modal.css
+++ b/src/components/UI/Modal/Modal.css
@@ -1,13 +1,13 @@
 .Modal {
 	height: 100vh;
 	width: 100vw;
-	position: relative;
 	margin-left: -50vw;
 	left: 50%;
 	margin-top: -50vh;
 	top: 50%;
-	position: absolute;
+	position: fixed;
 	background-color: rgba(0, 0, 0, 0.4);
+	overflow: hidden;
 }
 
 .Modal-showing {
