--- a/src/containers/Checkout/Checkout.css
+++ b/src/containers/Checkout/Checkout.css
@@ -1,6 +1,7 @@
 .Checkout {
 	width: 100vw;
-	height: 100vh;
+	min-height: 100vh;
+	padding: 2rem 0;
 	background-color: #ccc;
 	display: flex;
 	align-items: center;
@@ -23,4 +24,26 @@
 }
 .Checkout-form label {
 	margin: 0.5rem 1rem;
+}
+
+@media (max-width: 1200px) {
+	.Checkout-form {
+		width: 60%;
+	}
+}
+@media (max-width: 1024px) {
+	.Checkout-form {
+		width: 70%;
+	}
+}
+@media (max-width: 768px) {
+	.Checkout-form {
+		width: 80%;
+	}
+}
+
+@media (max-width: 480px) {
+	.Chekcout-form {
+		width: 90%;
+	}
 }
