--- a/src/containers/NewProduct/NewProduct.css
+++ b/src/containers/NewProduct/NewProduct.css
@@ -25,6 +25,7 @@
 	outline: none;
 	background-color: #ddd;
 	font-size: 1.3rem;
+	font-family: Arial, Helvetica, sans-serif;
 	border: 1px solid transparent;
 	box-sizing: border-box;
 }
