--- a/src/containers/Store/Store.css
+++ b/src/containers/Store/Store.css
@@ -43,6 +43,56 @@
 	flex-wrap: wrap;
 }
 
+.Store-notification {
+	position: sticky;
+	float: right;
+	bottom: 2rem;
+	right: 2rem;
+	text-decoration: none;
+	color: rgb(248, 194, 93);
+	background-color: #333;
+	padding: 1rem;
+	border-radius: 1rem;
+	font-weight: bold;
+	align-self: flex-end;
+	z-index: 10;
+}
+
+.ShowNotification {
+	animation: appear;
+	animation-duration: 0.4s;
+}
+
+.HideNotification {
+	animation: disappear;
+	animation-duration: 0.6s;
+	opacity: 0;
+}
+
+@keyframes appear {
+	0% {
+		display: block;
+		opacity: 0;
+		transform: translateY(10rem);
+	}
+	100% {
+		display: block;
+		opacity: 1;
+		transform: translateY(0);
+	}
+}
+
+@keyframes disappear {
+	0% {
+		transform: translateY(0);
+		opacity: 1;
+	}
+	100% {
+		transform: translateY(10rem);
+		opacity: 0;
+	}
+}
+
 @media (max-width: 1200px) {
 	.Store-main {
 		flex-direction: column;
