--- a/src/components/Orders/Orders.css
+++ b/src/components/Orders/Orders.css
@@ -1,5 +1,5 @@
 .Orders {
-	height: calc(100vh - 4.5rem);
+	min-height: calc(100vh - 4.5rem);
 	width: 100vw;
 	background-color: #eee;
 	display: flex;
